# rcvs

./: Cargo.toml  LICENSE  README.md
doc/: report.tex
src/: ballot.rs  lib.rs  simplex.rs  strategies.rs  util.rs
tests/: integration_test.rs
